Fix rendering hooks, fix info-header spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -241,11 +241,12 @@ h1 {
   width: 100%;
   display: block;
   background: white;
-  padding: 10px;
+  padding: 20px;
   margin-bottom: 20px
 }
+
 .info * {
-  padding: 5px;
+  padding: 5px 0;
 }
 
 .nav-link {
